--- a/ActivityTest/bin/AndroidManifest.xml
+++ b/ActivityTest/bin/AndroidManifest.xml
@@ -4,8 +4,8 @@
     android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="8"
-        android:targetSdkVersion="21" />
+        android:minSdkVersion="14"
+        android:targetSdkVersion="20" />
 
     <application
         android:allowBackup="true"
@@ -18,6 +18,13 @@
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
+        <activity android:name=".SecondActivity">
+            <intent-filter>
+            <action android:name="com.example.activitytest.ACTION_START"/>
+            <category android:name="android.intent.category.DEFAULT"/>
+            <category android:name="com.example.activitytest.MY_CATEGORY"/>
             </intent-filter>
         </activity>
     </application>
