--- a/ActivityTest/AndroidManifest.xml
+++ b/ActivityTest/AndroidManifest.xml
@@ -21,7 +21,8 @@
             </intent-filter>
             <data android:scheme="tel"></data>
         </activity>
-        <activity android:name=".SecondActivity">
+        <activity android:name=".SecondActivity"
+                  android:launchMode="singleInstance">
             <intent-filter>
             <action android:name="com.example.activitytest.ACTION_START"/>
             <category android:name="android.intent.category.DEFAULT"/>
